--- a/FirebaseTutorial/FirebaseTutorial/GoogleService-Info.plist
+++ b/FirebaseTutorial/FirebaseTutorial/GoogleService-Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Reversed</key>
+	<string></string>
 	<key>API_KEY</key>
 	<string>AIzaSyBZHoEFWBfglQhDj3ZCUnwi-r1e1aRnkAU</string>
 	<key>GCM_SENDER_ID</key>
@@ -15,16 +17,18 @@
 	<key>STORAGE_BUCKET</key>
 	<string>fir-tutorial-b1a50.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:476117234073:ios:6f97658595068055ca2308</string>
+	<key>CFBundleIdentifier</key>
+	<string></string>
 </dict>
 </plist>
